

ADD_DEFINITIONS(
		-DWEBRTC_NS_FLOAT
		)	
		
if(MSVC)
	ADD_DEFINITIONS(
		-D_CRT_SECURE_NO_WARNINGS)	

endif()


## 头文件目录
INCLUDE_DIRECTORIES( 
		./ 
		audio/common/processing 
		audio/common/vad 
		audio/processing/aec 
		audio/processing/aecm 
		audio/processing/agc 
	    audio/processing/ns 
		audio/processing/utility 
	    system_wrappers	
)



if( WIN32 )
	SET( system_wrapper 
		system_wrappers/critical_section_win.cc 
		
		system_wrappers/cpu_features.cc  
		system_wrappers/critical_section.cc  
		system_wrappers/file_impl.cc		
	)
else()
	SET( system_wrapper 
	
		system_wrappers/critical_section_posix.cc  

		system_wrappers/cpu_features.cc  
		system_wrappers/critical_section.cc  
		system_wrappers/file_impl.cc

	)
endif()


SET(YATE_EXT_LIB_TARTGET miniwebrtc)


ADD_LIBRARY(${YATE_EXT_LIB_TARTGET} STATIC

	audio/common/resampler/resampler.cc 
	audio/common/processing/auto_correlation.c 
	audio/common/processing/auto_corr_to_refl_coef.c  
	audio/common/processing/complex_bit_reverse.c  
	audio/common/processing/complex_fft.c  
	audio/common/processing/copy_set_operations.c  
	audio/common/processing/cross_correlation.c  
	audio/common/processing/division_operations.c  
	audio/common/processing/dot_product_with_scale.c  
	audio/common/processing/downsample_fast.c  
	audio/common/processing/energy.c  
	audio/common/processing/filter_ar.c  
	audio/common/processing/filter_ar_fast_q12.c  
	audio/common/processing/filter_ma_fast_q12.c  
	audio/common/processing/get_hanning_window.c  
	audio/common/processing/get_scaling_square.c  
	audio/common/processing/ilbc_specific_functions.c  
	audio/common/processing/levinson_durbin.c  
	audio/common/processing/lpc_to_refl_coef.c  
	audio/common/processing/min_max_operations.c  
	audio/common/processing/randomization_functions.c  
	audio/common/processing/refl_coef_to_lpc.c  
	audio/common/processing/resample.c  
	audio/common/processing/resample_48khz.c  
	audio/common/processing/resample_by_2.c  
	audio/common/processing/resample_by_2_internal.c  
	audio/common/processing/resample_fractional.c  
	audio/common/processing/splitting_filter.c  
	audio/common/processing/spl_sqrt.c  
	audio/common/processing/spl_sqrt_floor.c  
	audio/common/processing/spl_version.c  
	audio/common/processing/sqrt_of_one_minus_x_squared.c  
	audio/common/processing/vector_scaling_operations.c  
	audio/common/processing/webrtc_fft_t_1024_8.c  
	audio/common/processing/webrtc_fft_t_rad.c  
	audio/common/vad/vad_core.c  
	audio/common/vad/vad_filterbank.c  
	audio/common/vad/vad_gmm.c  
	audio/common/vad/vad_sp.c  
	audio/common/vad/webrtc_vad.c  
	audio/coding_g722/g722_decode.c  
	audio/coding_g722/g722_encode.c  
	audio/coding_g722/g722_interface.c  
	audio/coding_isac/fix/arith_routines.c  
	audio/coding_isac/fix/arith_routines_hist.c  
	audio/coding_isac/fix/arith_routines_logist.c  
	audio/coding_isac/fix/bandwidth_estimator.c  
	audio/coding_isac/fix/decode.c  
	audio/coding_isac/fix/decode_bwe.c  
	audio/coding_isac/fix/decode_plc.c  
	audio/coding_isac/fix/encode.c  
	audio/coding_isac/fix/entropy_coding.c  
	audio/coding_isac/fix/fft.c  
	audio/coding_isac/fix/filterbanks.c  
	audio/coding_isac/fix/filterbank_tables.c  
	audio/coding_isac/fix/filters.c  
	audio/coding_isac/fix/initialize.c  
	audio/coding_isac/fix/isacfix.c  
	audio/coding_isac/fix/lattice.c  
	audio/coding_isac/fix/lattice_c.c  
	audio/coding_isac/fix/lpc_masking_model.c  
	audio/coding_isac/fix/lpc_tables.c  
	audio/coding_isac/fix/pitch_estimator.c  
	audio/coding_isac/fix/pitch_filter.c  
	audio/coding_isac/fix/pitch_gain_tables.c  
	audio/coding_isac/fix/pitch_lag_tables.c  
	audio/coding_isac/fix/spectrum_ar_model_tables.c  
	audio/coding_isac/fix/transform.c  
	audio/coding_isac/main/arith_routines.c  
	audio/coding_isac/main/arith_routines_hist.c  
	audio/coding_isac/main/arith_routines_logist.c  
	audio/coding_isac/main/bandwidth_estimator.c  
	audio/coding_isac/main/crc.c  
	audio/coding_isac/main/decode.c  
	audio/coding_isac/main/decode_bwe.c  
	audio/coding_isac/main/encode.c  
	audio/coding_isac/main/encode_lpc_swb.c  
	audio/coding_isac/main/entropy_coding.c  
	audio/coding_isac/main/fft.c  
	audio/coding_isac/main/filterbanks.c  
	audio/coding_isac/main/filterbank_tables.c  
	audio/coding_isac/main/filter_functions.c  
	audio/coding_isac/main/intialize.c  
	audio/coding_isac/main/isac.c  
	audio/coding_isac/main/lattice.c  
	audio/coding_isac/main/lpc_analysis.c  
	audio/coding_isac/main/lpc_gain_swb_tables.c  
	audio/coding_isac/main/lpc_shape_swb12_tables.c  
	audio/coding_isac/main/lpc_shape_swb16_tables.c  
	audio/coding_isac/main/lpc_tables.c  
	audio/coding_isac/main/pitch_estimator.c  
	audio/coding_isac/main/pitch_filter.c  
	audio/coding_isac/main/pitch_gain_tables.c  
	audio/coding_isac/main/pitch_lag_tables.c  
	audio/coding_isac/main/spectrum_ar_model_tables.c  
	audio/coding_isac/main/transform.c  
	audio/coding_ilbc/abs_quant.c 
	audio/coding_ilbc/abs_quant_loop.c 
	audio/coding_ilbc/augmented_cb_corr.c 
	audio/coding_ilbc/bw_expand.c 
	audio/coding_ilbc/cb_construct.c 
	audio/coding_ilbc/cb_mem_energy_augmentation.c 
	audio/coding_ilbc/cb_mem_energy.c 
	audio/coding_ilbc/cb_mem_energy_calc.c 
	audio/coding_ilbc/cb_search.c 
	audio/coding_ilbc/cb_search_core.c 
	audio/coding_ilbc/cb_update_best_index.c 
	audio/coding_ilbc/chebyshev.c 
	audio/coding_ilbc/comp_corr.c 
	audio/coding_ilbc/constants.c 
	audio/coding_ilbc/create_augmented_vec.c 
	audio/coding_ilbc/decode.c 
	audio/coding_ilbc/decode_residual.c 
	audio/coding_ilbc/decoder_interpolate_lsf.c 
	audio/coding_ilbc/do_plc.c 
	audio/coding_ilbc/encode.c 
	audio/coding_ilbc/energy_inverse.c 
	audio/coding_ilbc/enhancer.c 
	audio/coding_ilbc/enhancer_interface.c 
	audio/coding_ilbc/enh_upsample.c 
	audio/coding_ilbc/filtered_cb_vecs.c 
	audio/coding_ilbc/frame_classify.c 
	audio/coding_ilbc/gain_dequant.c 
	audio/coding_ilbc/gain_quant.c 
	audio/coding_ilbc/get_cd_vec.c 
	audio/coding_ilbc/get_lsp_poly.c 
	audio/coding_ilbc/get_sync_seq.c 
	audio/coding_ilbc/hp_input.c 
	audio/coding_ilbc/hp_output.c 
	audio/coding_ilbc/ilbc.c 
	audio/coding_ilbc/index_conv_dec.c 
	audio/coding_ilbc/index_conv_enc.c 
	audio/coding_ilbc/init_decode.c 
	audio/coding_ilbc/init_encode.c 
	audio/coding_ilbc/interpolate.c 
	audio/coding_ilbc/interpolate_samples.c 
	audio/coding_ilbc/lpc_encode.c 
	audio/coding_ilbc/lsf_check.c 
	audio/coding_ilbc/lsf_interpolate_to_poly_dec.c 
	audio/coding_ilbc/lsf_interpolate_to_poly_enc.c 
	audio/coding_ilbc/lsf_to_lsp.c 
	audio/coding_ilbc/lsf_to_poly.c 
	audio/coding_ilbc/lsp_to_lsf.c 
	audio/coding_ilbc/my_corr.c 
	audio/coding_ilbc/nearest_neighbor.c 
	audio/coding_ilbc/pack_bits.c 
	audio/coding_ilbc/poly_to_lsf.c 
	audio/coding_ilbc/poly_to_lsp.c 
	audio/coding_ilbc/refiner.c 
	audio/coding_ilbc/simple_interpolate_lsf.c 
	audio/coding_ilbc/simple_lpc_analysis.c 
	audio/coding_ilbc/simple_lsf_dequant.c 
	audio/coding_ilbc/simple_lsf_quant.c 
	audio/coding_ilbc/smooth.c 
	audio/coding_ilbc/smooth_out_data.c 
	audio/coding_ilbc/sort_sq.c 
	audio/coding_ilbc/split_vq.c 
	audio/coding_ilbc/state_construct.c 
	audio/coding_ilbc/state_search.c 
	audio/coding_ilbc/swap_bytes.c 
	audio/coding_ilbc/unpack_bits.c 
	audio/coding_ilbc/vq3.c 
	audio/coding_ilbc/vq4.c 
	audio/coding_ilbc/window32_w32.c 
	audio/coding_ilbc/xcorr_coef.c 
	audio/processing/audio_buffer.cc  
	audio/processing/audio_processing_impl.cc  
	audio/processing/echo_cancellation_impl.cc  
	audio/processing/echo_control_mobile_impl.cc  
	audio/processing/gain_control_impl.cc  
	audio/processing/high_pass_filter_impl.cc  
	audio/processing/level_estimator_impl.cc  
	audio/processing/noise_suppression_impl.cc  
	audio/processing/processing_component.cc  
	audio/processing/splitting_filter.cc 
	audio/processing/voice_detection_impl.cc  
	audio/processing/aec/aec_core.c  
	audio/processing/aec/aec_rdft.c  
	audio/processing/aec/aec_resampler.c  
	audio/processing/aec/echo_cancellation.c  
	audio/processing/aecm/aecm_core.c  
	audio/processing/aecm/echo_control_mobile.c  
	audio/processing/agc/analog_agc.c  
	audio/processing/agc/digital_agc.c  
	audio/processing/ns/noise_suppression.c  
	audio/processing/ns/ns_core.c  
	audio/processing/utility/delay_estimator.c  
	audio/processing/utility/delay_estimator_wrapper.c  
	audio/processing/utility/fft4g.c  
	audio/processing/utility/ring_buffer.c  
	
	
	${system_wrapper}


)




## 链接Yate库
## TARGET_LINK_LIBRARIES( ${YATE_EXT_LIB_TARTGET} yateengine )

SET_PROPERTY(TARGET ${YATE_EXT_LIB_TARTGET} PROPERTY FOLDER "libs")

