
if(MSVC)
ADD_DEFINITIONS( -DLIBYRADIO_STATIC )
endif()

INCLUDE_DIRECTORIES( . )

SET(YATE_EXT_LIB_TARTGET yradio)

ADD_LIBRARY(${YATE_EXT_LIB_TARTGET} STATIC
    codec.cpp
    radio.cpp
)


## 链接Yate库
TARGET_LINK_LIBRARIES( ${YATE_EXT_LIB_TARTGET} yateengine )

SET_PROPERTY(TARGET ${YATE_EXT_LIB_TARTGET} PROPERTY FOLDER "libs")
